# nginx_study

./: README.md
doc/: 1  eventpoll.odg  nginx.odg
my/: Makefile  Makefile.in  a.sh  config.h  config.status  configure  configure.in  libtool  tags
my/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
my/src/: Makefile  Makefile.am  Makefile.in  libcore.la  libcore_la-ngx_cycle.lo  libcore_la-ngx_log.lo  libcore_la-ngx_string.lo  libcore_la-ngx_times.lo  libunix.la  libunix_la-ngx_errno.lo  libunix_la-ngx_process_cycle.lo  libunix_la-ngx_time.lo  nginx
my/src/.deps/: libcore_a-ngx_log.Po  libcore_a-ngx_string.Po  libcore_la-ngx_cycle.Plo  libcore_la-ngx_log.Plo  libcore_la-ngx_string.Plo  libcore_la-ngx_times.Plo  libunix_a-ngx_errno.Po  libunix_la-ngx_errno.Plo  libunix_la-ngx_process_cycle.Plo  libunix_la-ngx_time.Plo  nginx-nginx.Po  nginx.Po
my/src/core/: nginx.c  nginx.h  ngx_conf_file.h  ngx_config.h  ngx_core.h  ngx_cycle.c  ngx_cycle.h  ngx_log.c  ngx_log.h  ngx_rbtree.h  ngx_string.c  ngx_string.h  ngx_times.c  ngx_times.h
my/src/os/unix/: ngx_alloc.h  ngx_atomic.h  ngx_errno.c  ngx_errno.h  ngx_files.h  ngx_process.h  ngx_process_cycle.c  ngx_process_cycle.h  ngx_time.c  ngx_time.h
nginx-1.3.14/: tags
nginx-1.3.14/auto/: options
nginx-1.3.14/objs/: Makefile  autoconf.err  nginx  nginx.8  ngx_auto_config.h
nginx-1.3.14/src/core/: nginx.c  ngx_cycle.c  ngx_log.c  ngx_log.h  ngx_string.h  ngx_times.c
nginx-1.3.14/src/event/: ngx_event.c
nginx-1.3.14/src/http/: ngx_http_request.c
test/: nonlock.c
(+4 files in other folders)
